--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
   <div class="container">
     <div class="ong">
     <h1>Un proyecto de</h1>
-        <a href="">
+        <a href="https://www.bitcoinargentina.org/">
           <img src="/theme/images/ong_logo.png" alt="">
         </a>
     </div>
@@ -282,22 +282,22 @@
     <h1>Apoyan</h1>
     <div class="row">
       <div class="col">
-        <a href="">
+        <a href="https://koibanx.com/">
           <img src="/theme/images/koibanx_logo.png" alt="">
         </a>
       </div>
       <div class="col">
-        <a href="">
+        <a href="https://www.iovlabs.org/">
           <img src="/theme/images/iov_logo.png" alt="">
         </a>
       </div>
       <div class="col">
-        <a href="">
+        <a href="https://cryptorocket.group/">
           <img src="/theme/images/crg_logo.png" class='rocket' alt="">
         </a>
       </div>
       <div class="col">
-        <a href="">
+        <a href="https://www.b4h.world/">
           <img src="/theme/images/b4h-logo.png" class='b4h' alt="">
         </a>
       </div>
