--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 
 <div class="el-proyecto">
   <div class="container">
-    <h2>El proyecto</h2>
-    <p>El Proyecto Comedor busca promover acciones positivas de gente del barrio y la economía local, aplicando tecnología blockchain para la eficiencia en la trazabilidad y gestión de donaciones.</p>
-    <p>Con el objeto de colaborar durante al menos 6 meses con este comedor y centro cultural del Barrio 21-14 aspira a recaudar un mínimo de US$ 5.000.</p>
+    <h2>Proyecto Comedor</h2>
+    <p>El proyecto comedor busca promover acciones positivas de la comunidad y la economía local, aplicando tecnología Blockchain para la eficiencia de la trazabilidad y gestión de donaciones.</p>
+    <p>Con el objeto de colaborar durante al menos 6 meses con Casa Cambalache un comedor y centro cultural de la Villa 21-24-Zavaleta de la Ciudad de Buenos Aires, aspira a recaudar un mínimo de USD 5.000.</p>
   </div>
 </div>
 
@@ -120,14 +120,14 @@
     </div>
     <div class="col-md-6 order-2">
       <h1>Casa Cambalache</h1>
-      <p>Hace más de 25 años, en el asentamiento más poblado de la Ciudad de Buenos Aires, el Barrio Zavaleta (Villa 21-24), Casa Cambalache y su incansable grupo de personas voluntarias, reciben y preparan alimentos para más de 300 personas por día.</p>
+      <p>Hace más de 25 años, en el asentamiento más poblado de la Ciudad de Buenos Aires, la Villa 21-24-Zavaleta, Casa Cambalache y su incansable grupo de personas voluntarias, reciben y preparan alimentos para más de 300 personas por día.</p>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-6 order-4 order-md-3">
       <h1>Un barrio es familia</h1>
-      <p>Pero Casa Cambalache es mucho más que un comedor, en oído y concejo para las múltiples problemáticas de los vecinos como la falta de urbanización, la violencia de genero, la represión policial y la falta de alimentación saludable. Además se ofrecen también acompañamiento académico y organizan actividades culturales.</p>
+      <p>Pero Casa Cambalache es mucho más que un comedor, es el oído y el consejo para las múltiples problemáticas de los vecinos y vecinas, como la falta de urbanización, la violencia de género, la represión policial y la falta de alimentación saludable. Además, se ofrece también, acompañamiento académico y se organizan actividades culturales.</p>
     </div>
     <div class="col-md-6 order-3 order-md-4">
       <img src="/theme/images/Cambalache_151955.jpg" alt="">
@@ -165,7 +165,7 @@
             <i class="icon-refresh m-auto"></i>
           </div>
           <h3>Una microeconomía sustentable</h3>
-          <p>Las donaciones tienen un triple impacto. Le llegan a personas voluntarias del comedor en forma de puntos que luego pueden usar para comprar en los distintos almacenes adheridos al proyecto. Así, los chicos siguen comiendo, las personas voluntarias siguen yendo y los negocios del barrio siguen creciendo.</p>
+          <p>Las donaciones recibidas en los comedores tienen un triple impacto. Las personas voluntarias del comedor reciben en forma de puntos, el valor de su donación, que luego pueden usar para comprar en los distintos almacenes adheridos al proyecto. De esta forma, la gente que asiste al comedor siguen teniendo un plato de comida, las personas voluntarias siguen yendo a colaborar y los negocios del barrio siguen creciendo.</p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -174,7 +174,7 @@
             <i class="icon-magnifier m-auto"></i>
           </div>
           <h3>100% transparente</h3>
-          <p>Un informe periódico permitirá a los beneficiarios y/o los donantes auditar cada punto entregado y recibido e identificar esos movimientos en la blockchain, pudiendo ver entender exactamente qué actividades y a quién apoyó con su aporte.</p>
+          <p>Un informe periódico permitirá a los beneficiarios y/o donantes auditar cada punto entregado y recibido, e identificar, así, esos movimientos en la blockchain, pudiendo ver exactamente qué actividades y a quién apoyó con su aporte.</p>
         </div>
       </div>
       <div class="col-lg-4">
@@ -183,7 +183,7 @@
             <i class="icon-graph m-auto"></i>
           </div>
           <h3>Gestión eficiente</h3>
-          <p>El 100% de lo donado termina en manos de los beneficiarios en forma de puntos canjeables en comercios, gracias a que el proyecto requiere un mínimo costo de setup y mantenimiento que se cubre mediante un descuento hecho al comerciante.</p>
+          <p>El 100% de lo donado termina en manos de los beneficiarios en forma de puntos canjeables en comercios, gracias a que el proyecto requiere un mínimo costo de setup y mantenimiento, que se cubre mediante un descuento hecho al comerciante.</p>
         </div>
       </div>
     </div>
@@ -203,8 +203,8 @@
               <div class="features-icons-icon d-flex">
                 <i class="icon-user-female m-auto"></i>
               </div>
-              <h3>Voluntarias</h3>
-              <p class="lead mb-0">Las personas voluntarias son remuneradas por su esfuerzo y pueden seguir yendo al comedor.</p>
+              <h3>Voluntariado</h3>
+              <p class="lead mb-0">Las personas voluntarias son remuneradas por su esfuerzo y de esta forma, se visibiliza su trabajo en el comedor.</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -213,7 +213,7 @@
                 <i class="icon-home m-auto"></i>
               </div>
               <h3>Comedor</h3>
-              <p class="lead mb-0">El comedor sigue abierto para las más de 300 personas que se acercan cada día.</p>
+              <p class="lead mb-0">El comedor sigue abierto para más de las 300 personas que se acercan cada día.</p>
             </div>
           </div>
           <div class="col-lg-4">
@@ -222,7 +222,7 @@
                 <i class="icon-basket m-auto"></i>
               </div>
               <h3>Comercios</h3>
-              <p class="lead mb-0">Desarrollan su negocio mientras apoyan a las personas voluntarias.</p>
+              <p class="lead mb-0">Desarrollan su negocio mientras apoyan el trabajo realizado por la comunidad en los comedores.</p>
             </div>
           </div>
         </div>
